@@ -42,13 +42,7 @@ Ptr<EnergySource>
 BasicEnergySourceHelper::DoInstall (Ptr<Node> node) const
 {
   NS_ASSERT (node != NULL);
-  // check if energy source already exists
-  Ptr<EnergySource> source = node->GetObject<EnergySource> ();
-  if (source != NULL)
-    {
-      NS_FATAL_ERROR ("Energy source already installed!");
-    }
-  source = m_basicEnergySource.Create<EnergySource> ();
+  Ptr<EnergySource> source = m_basicEnergySource.Create<EnergySource> ();
   NS_ASSERT (source != NULL);
   source->SetNode (node);
   return source;
